--- a/BacaLexia/StoryBoard/Ahuruf.storyboard
+++ b/BacaLexia/StoryBoard/Ahuruf.storyboard
@@ -17,51 +17,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="moh-LS-3Lo">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="moh-LS-3Lo">
                                 <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1194" id="GaK-rL-3n1"/>
+                                    <constraint firstAttribute="height" constant="834" id="k8Q-Io-ylw"/>
+                                </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="Ivh-92-rWR" userLabel="ArrowButton">
-                                <rect key="frame" x="20" y="20" width="110" height="110"/>
+                                <rect key="frame" x="40" y="40" width="110" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="110" id="2IG-6a-V52"/>
+                                    <constraint firstAttribute="height" constant="110" id="bWf-HK-TyV"/>
+                                </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iTq-Cn-CYt" userLabel="HurufImage">
-                                <rect key="frame" x="397" y="233" width="400" height="400"/>
+                                <rect key="frame" x="397" y="321" width="400" height="400"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="400" id="NMr-MM-Iqd"/>
-                                    <constraint firstAttribute="height" constant="400" id="rUV-pe-K72"/>
+                                    <constraint firstAttribute="height" constant="400" id="0f3-2q-mGw"/>
+                                    <constraint firstAttribute="width" constant="400" id="Z70-oF-a2N"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow 1" translatesAutoresizingMaskIntoConstraints="NO" id="mjN-SZ-ISE">
-                                <rect key="frame" x="1018" y="392" width="156" height="156"/>
+                                <rect key="frame" x="1034" y="503" width="120" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="156" id="ejO-8a-9AX"/>
-                                    <constraint firstAttribute="height" constant="156" id="oms-bz-JAb"/>
+                                    <constraint firstAttribute="width" constant="120" id="0Ff-7t-ZIN"/>
+                                    <constraint firstAttribute="height" constant="120" id="qfS-FB-i91"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mendengarBoard" translatesAutoresizingMaskIntoConstraints="NO" id="15m-FT-DS4">
-                                <rect key="frame" x="258" y="-64" width="678" height="225"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Text Cloud 2" translatesAutoresizingMaskIntoConstraints="NO" id="15m-FT-DS4">
+                                <rect key="frame" x="192" y="-95" width="852" height="366"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="678" id="6a7-Jp-kbi"/>
-                                    <constraint firstAttribute="height" constant="225" id="seH-Ej-Nd0"/>
+                                    <constraint firstAttribute="width" constant="852" id="0Ad-Gs-yo0"/>
+                                    <constraint firstAttribute="height" constant="366" id="2dM-K7-iCP"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xrz-Jg-rw5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="top" secondItem="15m-FT-DS4" secondAttribute="bottom" constant="72" id="94c-mC-rx1"/>
-                            <constraint firstItem="moh-LS-3Lo" firstAttribute="trailing" secondItem="4uK-qT-MYF" secondAttribute="trailing" id="9h1-5c-Q4h"/>
-                            <constraint firstItem="mjN-SZ-ISE" firstAttribute="leading" secondItem="iTq-Cn-CYt" secondAttribute="trailing" constant="221" id="FaV-tL-6zU"/>
-                            <constraint firstItem="moh-LS-3Lo" firstAttribute="leading" secondItem="4uK-qT-MYF" secondAttribute="leading" id="Hfk-WD-eKh"/>
-                            <constraint firstItem="moh-LS-3Lo" firstAttribute="bottom" secondItem="4uK-qT-MYF" secondAttribute="bottom" id="Oue-2d-ePb"/>
-                            <constraint firstItem="15m-FT-DS4" firstAttribute="leading" secondItem="Ivh-92-rWR" secondAttribute="trailing" constant="128" id="PB2-Qi-tTd"/>
-                            <constraint firstItem="Ivh-92-rWR" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="20" id="Uhl-hn-fHQ"/>
-                            <constraint firstItem="mjN-SZ-ISE" firstAttribute="top" secondItem="xrz-Jg-rw5" secondAttribute="top" constant="392" id="ZxM-A0-67h"/>
-                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="bottom" secondItem="iTq-Cn-CYt" secondAttribute="bottom" constant="181" id="aSJ-fl-F6u"/>
-                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="mjN-SZ-ISE" secondAttribute="trailing" constant="20" id="dnF-Oj-3Fl"/>
-                            <constraint firstItem="Ivh-92-rWR" firstAttribute="top" secondItem="xrz-Jg-rw5" secondAttribute="top" constant="20" id="mwd-V4-tX1"/>
-                            <constraint firstItem="15m-FT-DS4" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="top" constant="-64" id="pFw-mz-mCD"/>
-                            <constraint firstItem="moh-LS-3Lo" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="top" id="tBw-zD-4p6"/>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="397" id="yJ7-BT-d4c"/>
+                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="bottom" secondItem="mjN-SZ-ISE" secondAttribute="bottom" constant="191" id="6WD-D4-Ufb"/>
+                            <constraint firstItem="mjN-SZ-ISE" firstAttribute="top" secondItem="xrz-Jg-rw5" secondAttribute="top" constant="503" id="6x7-Vn-p7a"/>
+                            <constraint firstItem="moh-LS-3Lo" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="top" id="DGC-Ce-aUw"/>
+                            <constraint firstAttribute="trailing" secondItem="moh-LS-3Lo" secondAttribute="trailing" id="S0G-9d-ccd"/>
+                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="top" secondItem="15m-FT-DS4" secondAttribute="bottom" constant="50" id="Ulk-d3-Cvo"/>
+                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="397" id="XpU-8a-MGk"/>
+                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="15m-FT-DS4" secondAttribute="trailing" constant="150" id="Y1H-vh-LxY"/>
+                            <constraint firstItem="Ivh-92-rWR" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="40" id="Y4R-0X-tse"/>
+                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="mjN-SZ-ISE" secondAttribute="trailing" constant="40" id="Z36-eb-t1o"/>
+                            <constraint firstItem="Ivh-92-rWR" firstAttribute="top" secondItem="xrz-Jg-rw5" secondAttribute="top" constant="40" id="kiP-DH-eMf"/>
+                            <constraint firstAttribute="bottom" secondItem="moh-LS-3Lo" secondAttribute="bottom" id="mYY-NK-kn0"/>
+                            <constraint firstItem="15m-FT-DS4" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="192" id="poE-L3-YbA"/>
+                            <constraint firstItem="moh-LS-3Lo" firstAttribute="leading" secondItem="4uK-qT-MYF" secondAttribute="leading" id="v2z-sv-ajF"/>
+                            <constraint firstItem="15m-FT-DS4" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="top" constant="-95" id="v7r-bI-q8k"/>
+                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="iTq-Cn-CYt" secondAttribute="trailing" constant="397" id="zlr-He-S2A"/>
                         </constraints>
                     </view>
                     <connections>
@@ -78,10 +87,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Arrow 1" width="156" height="156"/>
-        <image name="Background " width="1194" height="834"/>
+        <image name="Arrow 1" width="120" height="120"/>
+        <image name="Background" width="1194" height="834"/>
+        <image name="Text Cloud 2" width="940" height="358"/>
         <image name="arrow3" width="110" height="110"/>
-        <image name="mendengarBoard" width="852" height="366"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
