--- a/BacaLexia/StoryBoard/Main.storyboard
+++ b/BacaLexia/StoryBoard/Main.storyboard
@@ -17,36 +17,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="OAL-57-JL3">
-                                <rect key="frame" x="0.0" y="-65" width="1223" height="935"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="OAL-57-JL3">
+                                <rect key="frame" x="-9" y="-53" width="1204" height="941"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1204" id="Xur-ly-OeJ"/>
+                                    <constraint firstAttribute="height" constant="941" id="vrX-zd-CaT"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Vocal" translatesAutoresizingMaskIntoConstraints="NO" id="AU3-P5-Aad">
-                                <rect key="frame" x="61" y="130" width="424" height="416"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vocal" translatesAutoresizingMaskIntoConstraints="NO" id="AU3-P5-Aad">
+                                <rect key="frame" x="91" y="297" width="420" height="416"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="416" id="2d3-eZ-dSB"/>
+                                    <constraint firstAttribute="width" constant="420" id="arD-IO-WYM"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Konsonan" translatesAutoresizingMaskIntoConstraints="NO" id="zKc-1B-sN9">
-                                <rect key="frame" x="551" y="189" width="424" height="416"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EpD-Ir-Lnl">
-                                <rect key="frame" x="76" y="96" width="1060" height="675"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JJn-Wd-Pvp">
-                                <rect key="frame" x="1071" y="96" width="65" height="68"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Konsonan" translatesAutoresizingMaskIntoConstraints="NO" id="zKc-1B-sN9">
+                                <rect key="frame" x="680" y="297" width="420" height="416"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="416" id="KcV-a2-asy"/>
+                                    <constraint firstAttribute="width" constant="420" id="SgS-H8-zJ8"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kuT-4G-HYH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zKc-1B-sN9" firstAttribute="top" secondItem="kuT-4G-HYH" secondAttribute="top" constant="297" id="2hy-yf-rrw"/>
+                            <constraint firstItem="kuT-4G-HYH" firstAttribute="trailing" secondItem="zKc-1B-sN9" secondAttribute="trailing" constant="94" id="4e8-T3-xCk"/>
+                            <constraint firstItem="AU3-P5-Aad" firstAttribute="leading" secondItem="kuT-4G-HYH" secondAttribute="leading" constant="91" id="5Nx-Rk-FBL"/>
+                            <constraint firstItem="AU3-P5-Aad" firstAttribute="top" secondItem="kuT-4G-HYH" secondAttribute="top" constant="297" id="7Pb-GM-dES"/>
+                            <constraint firstAttribute="bottom" secondItem="OAL-57-JL3" secondAttribute="bottom" constant="-54" id="Aak-cT-elD"/>
+                            <constraint firstAttribute="trailing" secondItem="OAL-57-JL3" secondAttribute="trailing" constant="-1" id="HeY-RD-5Rf"/>
+                            <constraint firstItem="OAL-57-JL3" firstAttribute="leading" secondItem="dBx-1s-VY7" secondAttribute="leading" constant="-9" id="K7N-9d-t1o"/>
+                            <constraint firstItem="OAL-57-JL3" firstAttribute="top" secondItem="dBx-1s-VY7" secondAttribute="top" constant="-53" id="vyN-un-d9X"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="background" destination="OAL-57-JL3" id="p3k-sO-Ynu"/>
                         <outlet property="konsonanButton" destination="zKc-1B-sN9" id="zLH-Kq-q2O"/>
-                        <outlet property="panduanMain" destination="EpD-Ir-Lnl" id="Is7-jh-68P"/>
                         <outlet property="vocalButton" destination="AU3-P5-Aad" id="HlT-pg-Pqf"/>
-                        <outlet property="xxButton" destination="JJn-Wd-Pvp" id="iFB-DT-3zo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iwh-zi-wl8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -55,7 +63,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Background " width="1194" height="834"/>
+        <image name="Background" width="1194" height="834"/>
         <image name="Konsonan" width="420" height="420"/>
         <image name="Vocal" width="420" height="420"/>
         <systemColor name="systemBackgroundColor">
